Project Structure Created
'/src' - source files and makefile \n'/src/obj' - object code created for all the source files \n'/include' - header files \n'/lib' - library files \n'/bin' - binary of executables

--- a/src/makefile
+++ b/src/makefile
@@ -6,8 +6,8 @@ ODIR=obj
 LDIR=../lib
 LIBS=-lm
 
-_DEPS=myFunc.h
-_OBJ=main.o FuncDef.o
+_DEPS=
+_OBJ=Main.o
 
 DEPS=$(patsubst %,$(IDIR)/%,$(_DEPS))
 OBJ=$(patsubst %,$(ODIR)/%,$(_OBJ))
@@ -15,7 +15,7 @@ OBJ=$(patsubst %,$(ODIR)/%,$(_OBJ))
 $(ODIR)/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-../bin/main.out: $(OBJ)
+../bin/Main.out: $(OBJ)
 	gcc -o $@ $^ $(CFLAGS) $(LIBS)
 	
 .PHONY: clean
